--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -7,4 +7,4 @@
     android:layout_height="match_parent"
     android:background="@color/tan_background"
     android:drawSelectorOnTop="true"
-    tools:context="com.example.android.miwok.NumbersActivity"/>
+    tools:context="com.example.android.miwok.activities.NumbersActivity"/>
